dark mode fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -85,15 +85,6 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
 a {
   color: inherit;
   text-decoration: none;
